--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=true
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Simon\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/Users/simoncahill/Library/Application Support/NetBeans/8.1/build.properties
